non-msrv-tests/tests/ui/zeroize/zeroize.stderr
error: `Zeroize` doesn't support this option
 --> tests/ui/zeroize/zeroize.rs:8:24
  |
8 | #[derive_where(Zeroize(test))]
  |                        ^^^^

error: `Zeroize` doesn't support this option
  --> tests/ui/zeroize/zeroize.rs:12:24
   |
12 | #[derive_where(Zeroize(test = "test"))]
   |                        ^^^^

error: unexpected option syntax
  --> tests/ui/zeroize/zeroize.rs:16:24
   |
16 | #[derive_where(Zeroize("option"))]
   |                        ^^^^^^^^

error: unexpected option syntax
  --> tests/ui/zeroize/zeroize.rs:20:24
   |
20 | #[derive_where(Zeroize(crate(zeroize_)))]
   |                        ^^^^^^^^^^^^^^^

error: expected path, expected identifier
  --> tests/ui/zeroize/zeroize.rs:24:32
   |
24 | #[derive_where(Zeroize(crate = "struct Test"))]
   |                                ^^^^^^^^^^^^^

error: duplicate `crate` option
  --> tests/ui/zeroize/zeroize.rs:28:44
   |
28 | #[derive_where(Zeroize(crate = "zeroize_", crate = "zeroize_"))]
   |                                            ^^^^^^^^^^^^^^^^^^
